shadow-traffic/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: orders
spec:
  hosts: [orders]
  http:
    - route:
        - destination: {host: orders, subset: v1}
          weight: 100
      mirror:
        host: orders
        subset: v2
      mirrorPercentage:
        value: 20.0
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: orders
spec:
  host: orders
  subsets:
    - {name: v1, labels: {version: v1}}
    - {name: v2, labels: {version: v2}}
